Made show.ejs mobile responsive and updated footer

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,11 +1,11 @@
 <footer>
     <div class="f-info">
         <div class="f-info-social">
-           <a href="://www.lihttpsnkedin.com/in/dipak-kore-4994a8248?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkdin"> <i class="fa-brands fa-linkedin"></i></a>
+           <a href="https://www.linkedin.com/in/dipak-kore-4994a8248?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkdin"> <i class="fa-brands fa-linkedin"></i></a>
            <a href="https://www.instagram.com/deepak_kore.102?igsh=Ymh6N2w2cmltMmsz" class="instagram"> <i class="fa-brands fa-square-instagram" ></i></a>
-           <a href=" https://wa.me/message/6XYQK7M5AE6MH1 " class="whatsapp"> <i class="fa-brands fa-square-whatsapp"></i></a>
+           <a href=" https://wa.me/qr/UFZYQKOORM74A1 " class="whatsapp"> <i class="fa-brands fa-square-whatsapp"></i></a>
         </div>
-        <div class="f-info-bards">&copy; Deepak Private Limited</div>
+        <div class="f-info-bards">&copy; Created By Deepak Kore</div>
         <div class="f-info-links">
             <a href="/Privacy">Privacy</a>
             <a href="/Terms">Terms</a>
